# localstack-guide

./: .gitignore  .pre-commit-config.yaml  README.md  compose.yaml  pyproject.toml
scripts/: init_local.py
src/aws_local_dev/: __init__.py
src/aws_local_dev/configs/: __init__.py  aws_config.py
src/aws_local_dev/infrastructure/: __init__.py  base_stack.py
tests/aws_local_dev/: conftest.py  test_infrastructure.py
